infra/gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
